--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,7 +48,8 @@ dependencies:
   intl: any
   sqflite: ^2.2.8+3
   oktoast: ^3.3.1
-
+  #testing
+  mockito: ^5.2.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
